# KATE

./: .gitignore  ArchLinux_build.sh  CMakeLists.txt  Linux_Build.sh  Linux_Shaders.sh  README.md  Readme.txt  Todo.md  Useful_Links.txt  Windows_Build.bat  Windows_Shaders.bat  envLinux.cmake  envWindows.cmake  imgui.ini  logs.txt
DEPRECATED/: ArchLinux_Build.sh  CMakeLists(DEPRECATED).txt  README  TODO.md  dprecatedcmake.txt  kate_text_renderer.hpp
Docs/renderdoc_analysis/: renderdoc_1.cap
data/shaders/: point_light.frag  point_light.frag.spv  point_light.vert  point_light.vert.spv  simple_shader.frag  simple_shader.frag.spv  simple_shader.vert  simple_shader.vert.spv
include/: first_app.hpp  kate_buffer.hpp  kate_camera.hpp  kate_descriptors.hpp  kate_device.hpp  kate_frame_info.hpp  kate_game_object.hpp  kate_hash.hpp  kate_imgui_manager.hpp  kate_model.hpp  kate_pipeline.hpp  kate_renderer.hpp  kate_swap_chain.hpp  kate_text_renderer.hpp  kate_window.hpp  simple_render_system.hpp
include/input/: keyboard_input.hpp
include/systems/: point_light_system.hpp  simple_render_system.hpp
src/: first_app.cpp  kate_buffer.cpp  kate_camera.cpp  kate_descriptors.cpp  kate_device.cpp  kate_game_object.cpp  kate_imgui_manager.cpp  kate_model.cpp  kate_pipeline.cpp  kate_renderer.cpp  kate_swapp_chain.cpp  kate_window.cpp  main.cpp  simple_render_system.cpp
src/input/: keyboard_input.cpp
src/systems/: point_light_system.cpp  simple_render_system.cpp
